<?xml version="1.0"?>
<package format="3">
  <name>lawnbot_ros2</name>
  <version>0.0.0</version>
  <description>lawnbot ros2 package</description>
  <maintainer email="sfeigis@todo.todo">sfeigis</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>custom_message</exec_depend>
  <exec_depend>itertools</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
